update api service
